# ChangeLog for sys-fs/squashmount
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashmount-2.1 (19 Aug 2013)

  19 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-1.1 (18 Aug 2013)

  18 Aug 2013; Martin Väth <martin@mvath.de>:
  This is the successor of sys-fs/squash_dir