@@ -1,1 +1,1 @@
-DIST squashmount-2.1.tar.gz 25669 SHA256 7be5fff76103a67cb07d7087eb1e3d74e49a72ae2ec7027135d2e289609e1f0f SHA512 14b7dfc42ea3447f62be874e6c40b8848980baf952e83830b53d4dbe80bcce5221a96e67e178858199ee617f969fb6a38ddf3a59bb03584823f609d331abf48e WHIRLPOOL 5df10c0c74f9e5a2af2dabed44040eb09fcf78cf96a15677d37e614ee048317dcfc96ba28d87181a0d4574bc3a03617aa6fc23527729f942e6c30e973dfe2368
+DIST squashmount-2.2.tar.gz 27067 SHA256 c3a9afb52971bed053cad4da3fa18ddeb17fd1e1be43bf7dcfe5dda6016206d8 SHA512 5e8bdd1f616138b67d22ddbdfaa45669c9343261f0f53668650fe889e7037de0607ed79790d5c836b0e7cf30da0696a4ec9ef5474a5ac38c92622d9e2680e44f WHIRLPOOL 1a8858188b2a99a8956a7c3b32f9567fd2257f68b9ac4312e803206ff6196db23d9efe950dfdc86472b5672f2ac38ec7e46b283e55919c3f8783967a932fd611
