@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-2.2 (20 Aug 2013)
+
+  20 Aug 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Recommend dev-perl/File-Which
+
 *squashmount-2.1 (19 Aug 2013)
 
   19 Aug 2013; Martin Väth <martin@mvath.de>:
